Errors (#4)
* add error package and make api aware of error types

* make api be aware of error types

* Add additional error handling

* Add default response body

* Rename variables

* formatting
